# AVR_SIMULATOR

./: CMakeLists.txt  readme.md  todo.md
AVR_platform_test_code/: DHT_test_arduino_nano.ino  test.ino  test.ino.standard.s  test.ino.with_bootloader.standard.s
src/: alu.c  alu.h  arithmetic_and_logic_instructions.c  arithmetic_and_logic_instructions.h  avr_cpu_core.c  common.c  common.h  data_memory.h  eeprom.h  flash_program_memory.h  hex.c  hex.h  instruction_decode.h  instruction_register.h  main.c  opcodes.c  opcodes.h  program_counter.c  program_counter.h  register_file.h  registers.h  stack_pointer.h  status_register.c  status_register.h
src/InstructionSet/: arithmetic_and_logic_instructions.c  arithmetic_and_logic_instructions.h  opcodes (copy).h  opcodes.h
